2015-06-07

* Integrate with Travis-CI
* Add stuff to dist.ini for config