@@ -373,6 +373,13 @@ sub prepare_raygun {
 =back
 
 
+=head1 COPYRIGHT AND LICENSE
+
+This software is copyright (c) 2014 by Travis Holton.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
 =cut
 
 __PACKAGE__->meta->make_immutable();
