@@ -1,3 +1,9 @@
+2018-09-05
+
+* "Strict" checking of date strings in DateTime::Format::Strptime
+* Remove LICENSE from source tree - will be generated by Dist::Zilla
+* Add COPYRIGHT AND LICENSE section for CPANTS kwalitee
+
 2015-06-07
 
 * Integrate with Travis-CI
